--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -1,17 +1,19 @@
-<div class="text-center">
-  <form class="form-signin">
-    <br><br>
-    <h1 class="h3 mb-3 font-weight-normal">Enter your email and password</h1>
-    <label for="inputEmail" class="sr-only">Email address</label>
-    <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-    <label for="inputPassword" class="sr-only">Password</label>
-    <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-    <div class="checkbox mb-3">
-      <label>
-        <input type="checkbox" value="remember-me"> Remember me
-      </label>
-    </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-    <p class="mt-5 mb-3 text-muted">GameHub &copy; 2018-2019</p>
-  </form>
+<div class="row">
+  <div class="col-xs-12 col-sm-10 col-md-4 offset-sm-1 offset-md-4 text-center">
+    <form class="form-signin">
+      <br><br><br>
+      <h1 class="h3 mb-3 font-weight-normal">Enter your email and password</h1>
+      <label for="email" class="sr-only">Email address</label>
+      <input type="email" id="email" class="form-control" placeholder="Email address" required autofocus>
+      <label for="password" class="sr-only">Password</label>
+      <input type="password" id="password" class="form-control" placeholder="Password" required>
+      <div class="checkbox mb-3">
+        <label>
+          <input type="checkbox" value="remember-me"> Remember me
+        </label>
+      </div>
+      <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+      <p class="mt-5 mb-3 text-muted">GameHub &copy; 2018-2019</p>
+    </form>
+  </div>
 </div>
