--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,38 +42,34 @@
     </form>
   </div>
 </nav>
-
+<!-- SIDEBAR
 <div id="wrapper">
-  <!-- Sidebar -->
-  <div id="sidebar-wrapper">
-    <ul class="sidebar-nav nav-pills nav-stacked" id="menu">
-      <li class="active">
-        <a href="#">Overview</a>
-      </li>
-      <li>
-        <a href="#">Events</a>
-      </li>
-      <li>
-        <a href="#">About</a>
-      </li>
-      <li>
-        <a href="#">Services</a>
-      </li>
-      <li>
-        <a href="#">Contact</a>
-      </li>
-    </ul>
-  </div>
-  <!-- /#sidebar-wrapper -->
-  <!-- Page Content -->
-  <div id="page-content-wrapper">
-    <div class="container-fluid xyz">
-      <div class="row">
-        <div class="col-lg-12">
-          <router-outlet></router-outlet>
-        </div>
-      </div>
-    </div>
-  </div>
-  <!-- /#page-content-wrapper -->
+
+<div id="sidebar-wrapper">
+  <ul class="sidebar-nav nav-pills nav-stacked" id="menu">
+    <li class="active">
+      <a href="#">Overview</a>
+    </li>
+    <li>
+      <a href="#">Events</a>
+    </li>
+    <li>
+      <a href="#">About</a>
+    </li>
+    <li>
+      <a href="#">Services</a>
+    </li>
+    <li>
+      <a href="#">Contact</a>
+    </li>
+  </ul>
 </div>
+
+
+</div>
+-->
+
+<router-outlet></router-outlet>
+
+<!--<div id="page-content-wrapper">-->
+<!--</div>-->
