--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-lg gh-navbar">
-  <a class="navbar-brand" href="#">GameHub</a>
+  <a class="navbar-brand">GameHub</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -36,10 +36,18 @@
         <a class="nav-link disabled" href="#">Disabled</a>
       </li>-->
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-      <button class="btn gh-btn my-2 my-sm-0" type="submit">Search</button>
-    </form>
+    <ul class="navbar-nav navbar-right">
+      <li class="nav-item" routerLinkActive="active">
+        <button class="btn nav-btn"  routerLink="/register">Register</button>
+      </li>
+      <li class="nav-item" routerLinkActive="active">
+        <button class="btn nav-btn"  routerLink="/login">Login</button>
+      </li>
+    </ul>
+    <!--<form class="form-inline my-2 my-lg-0">-->
+      <!--<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">-->
+      <!--<button class="btn gh-btn my-2 my-sm-0" type="submit">Search</button>-->
+    <!--</form>-->
   </div>
 </nav>
 <!-- SIDEBAR
