--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,13 +37,22 @@
       </li>-->
     </ul>
     <ul class="navbar-nav navbar-right">
-      <li class="nav-item" routerLinkActive="active">
-        <button class="btn nav-btn" *ngIf="this.auth.isAuthenticated()" routerLink="/userprofile"></button>
+      <li class="nav-item dropdown" *ngIf="this.auth.isAuthenticated()">
+        <button class="btn nav-btn dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+          {{this.auth.username()}}
+        </button>
+        <div class="dropdown-menu gh-dropdown" aria-labelledby="navbarDropdown">
+          <a class="dropdown-item" href="#">Action</a>
+          <a class="dropdown-item" href="#">Another action</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item" (click)="onLogout()">Logout</a>
+        </div>
       </li>
-      <li class="nav-item" routerLinkActive="active">
+      <li class="nav-item" *ngIf="!this.auth.isAuthenticated()" routerLinkActive="active">
         <button class="btn nav-btn"  routerLink="/register">Register</button>
       </li>
-      <li class="nav-item" routerLinkActive="active">
+      <li class="nav-item" *ngIf="!this.auth.isAuthenticated()" routerLinkActive="active">
         <button class="btn nav-btn"  routerLink="/login">Login</button>
       </li>
     </ul>
