--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -1,3 +1,52 @@
-<p>
-  play works!
-</p>
+<!-- SIDEBAR-->
+<div id="wrapper">
+
+<div id="sidebar-wrapper">
+  <ul class="sidebar-nav nav-pills nav-stacked" id="menu">
+    <li>
+      <span class="sidebar-title"> <i class="fa fa-users"></i>&nbsp;&nbsp;Play with Friends</span>
+    </li>
+    <li>
+      <a>
+        <img src="/assets/images/avatar.png" alt="John Doe" class="" style="width:20px;">&nbsp;
+        arminkz&nbsp;
+        <span class="dot"></span>
+      </a>
+    </li>
+    <li>
+      <a>
+        <img src="/assets/images/avatar.png" alt="John Doe" class="" style="width:20px;">&nbsp;
+        ice snow&nbsp;
+        <span class="dot"></span>
+      </a>
+    </li>
+    <li>
+      <a>
+        <img src="/assets/images/avatar.png" alt="John Doe" class="" style="width:20px;">&nbsp;
+        cykablyat666&nbsp;
+        <span class="dot"></span>
+      </a>
+    </li>
+    <li>
+      <a>
+        <img src="/assets/images/avatar.png" alt="John Doe" class="" style="width:20px;">&nbsp;
+        reverse&nbsp;
+        <span class="dot"></span>
+      </a>
+    </li>
+    <br>
+    <br>
+    <li>
+      <span class="sidebar-title"> <i class="fa fa-random"></i>&nbsp;&nbsp;Random Opponent</span>
+    </li>
+    <li>
+      <a (click)="testToast()">Find Match</a>
+    </li>
+  </ul>
+</div>
+
+</div>
+
+<div id="page-content-wrapper">
+  <button class="btn btn-success"> toast </button>
+</div>
