--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,3 +1,23 @@
-<p>
-  users works!
-</p>
+<div class="row">
+  <div class="user col-md-3 col-sm-6 col-xs-12">
+    <app-user></app-user>
+  </div>
+  <div class="user col-md-3 col-sm-6 col-xs-12">
+    <app-user></app-user>
+  </div>
+  <div class="user col-md-3 col-sm-6 col-xs-12">
+    <app-user></app-user>
+  </div>
+  <div class="user col-md-3 col-sm-6 col-xs-12">
+    <app-user></app-user>
+  </div>
+  <div class="user col-md-3 col-sm-6 col-xs-12">
+    <app-user></app-user>
+  </div>
+  <div class="user col-md-3 col-sm-6 col-xs-12">
+    <app-user></app-user>
+  </div>
+  <div class="user col-md-3 col-sm-6 col-xs-12">
+    <app-user></app-user>
+  </div>
+</div>
