--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg gh-navbar">
-  <a class="navbar-brand">GameHub</a>
+<nav class="navbar sticky-top navbar-expand-lg gh-navbar">
+  <a class="navbar-brand">Game<span class="badge badge-primary">Hub</span></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -37,16 +37,29 @@
       </li>-->
     </ul>
     <ul class="navbar-nav navbar-right">
+      <li class="nav-item" *ngIf="this.auth.isAuthenticated()" routerLinkActive="active">
+        <button class="btn nav-btn admin-btn"  routerLink="/admin">
+          Admin Panel</button>
+      </li>
+      <li class="nav-item dropdown" *ngIf="this.auth.isAuthenticated()">
+        <button class="btn nav-btn notification-center" href="#" id="notificationDropdown" role="button" data-toggle="dropdown"
+                aria-haspopup="true" aria-expanded="false">
+          <i class="fa fa-bell icon-3x"></i>
+          <span class="badge badge-pill badge-warning">4</span>
+        </button>
+        <div class="dropdown-menu gh-dropdown" aria-labelledby="notificationDropdown">
+          <a class="dropdown-item">Friend Request from :</a>
+        </div>
+      </li>
       <li class="nav-item dropdown" *ngIf="this.auth.isAuthenticated()">
         <button class="btn nav-btn dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
                 aria-haspopup="true" aria-expanded="false">
           {{this.auth.username()}}
         </button>
         <div class="dropdown-menu gh-dropdown" aria-labelledby="navbarDropdown">
-          <a class="dropdown-item" href="#">Action</a>
-          <a class="dropdown-item" href="#">Another action</a>
+          <a class="dropdown-item" routerLink="/my"><i class="fa fa-user">&nbsp;&nbsp;&nbsp;</i>My Profile</a>
           <div class="dropdown-divider"></div>
-          <a class="dropdown-item" (click)="onLogout()">Logout</a>
+          <a class="dropdown-item" (click)="onLogout()"><i class="fa fa-sign-out">&nbsp;&nbsp;&nbsp;</i>Logout</a>
         </div>
       </li>
       <li class="nav-item" *ngIf="!this.auth.isAuthenticated()" routerLinkActive="active">
