--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,23 +1,5 @@
 <div class="row">
-  <div class="user col-md-3 col-sm-6 col-xs-12">
-    <app-user></app-user>
-  </div>
-  <div class="user col-md-3 col-sm-6 col-xs-12">
-    <app-user></app-user>
-  </div>
-  <div class="user col-md-3 col-sm-6 col-xs-12">
-    <app-user></app-user>
-  </div>
-  <div class="user col-md-3 col-sm-6 col-xs-12">
-    <app-user></app-user>
-  </div>
-  <div class="user col-md-3 col-sm-6 col-xs-12">
-    <app-user></app-user>
-  </div>
-  <div class="user col-md-3 col-sm-6 col-xs-12">
-    <app-user></app-user>
-  </div>
-  <div class="user col-md-3 col-sm-6 col-xs-12">
-    <app-user></app-user>
+  <div *ngFor="let userEl of users" class="user col-md-3 col-sm-6 col-xs-12">
+    <app-user [user]="userEl"></app-user>
   </div>
 </div>
