--- a/src/app/auth/signup/signup.component.html
+++ b/src/app/auth/signup/signup.component.html
@@ -3,8 +3,8 @@
     <form class="form-signin" (ngSubmit)="onSubmit(f)" #f="ngForm">
       <br><br><br>
       <h1 class="h3 mb-3 font-weight-normal">Create a new account</h1>
-      <label for="display-name">Display Name</label>
-      <input type="text" id="display-name" name="display-name" class="form-control" placeholder="Display Name" ngModel required autofocus>
+      <label for="displayName">Display Name</label>
+      <input type="text" id="displayName" name="displayName" class="form-control" placeholder="Display Name" ngModel required autofocus>
       <br>
       <label for="email">Email address</label>
       <input type="email" id="email" name="email" class="form-control" placeholder="Email address" ngModel required autofocus>
