--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,7 +1,7 @@
 <div class="media border p-3">
   <img [src]="getImageUrl()" alt="User Image" class="mr-3 mt-3 rounded-circle" style="width:60px;">
   <div class="media-body">
-    <h4>{{user.displayName}} <small><i class="green">Online</i></small></h4>
+    <h4>{{user.name}} <small><i class="green">Online</i></small></h4>
     <p>{{user.email}}</p>
   </div>
 </div>
