Uploader for Profile Picture

--- a/src/app/adminpanel/adminpanel.component.html
+++ b/src/app/adminpanel/adminpanel.component.html
@@ -14,9 +14,14 @@
         <img src="/assets/images/avatar.png" alt="John Doe" class="mr-3 mt-3 rounded-circle" style="width:60px;">
         <div class="media-body">
           <p>Armin Kazmei just commented on Hamed Modiri :</p>
-          <blockquote class="blockquote">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-          </blockquote>
+
+          <div class="media p-3">
+            <img src="/assets/images/avatar.png" alt="John Doe" class="mr-3 mt-3 rounded-circle" style="width:60px;">
+            <blockquote class="blockquote">
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
+            </blockquote>
+          </div>
+
           <div class="rating pull-right">
             <i class="fa fa-star checked"></i>
             <i class="fa fa-star checked"></i>
