--- a/src/app/play/play.component.html
+++ b/src/app/play/play.component.html
@@ -1,4 +1,4 @@
-<!-- SIDEBAR-->
+<!-- SIDEBAR
 <div id="wrapper">
 
 <div id="sidebar-wrapper">
@@ -45,7 +45,7 @@
   </ul>
 </div>
 
-</div>
+</div>-->
 
 <div id="page-content-wrapper">
   <button class="btn btn-success"> toast </button>
