--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,8 +53,7 @@
       </li>
       <li class="nav-item dropdown" *ngIf="this.auth.isAuthenticated()">
         <button class="btn nav-btn dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
-                aria-haspopup="true" aria-expanded="false">
-          {{this.auth.username()}}
+                aria-haspopup="true" aria-expanded="false" [innerHTML]="this.auth.currentUserSubject.value.name">
         </button>
         <div class="dropdown-menu gh-dropdown" aria-labelledby="navbarDropdown">
           <a class="dropdown-item" routerLink="/my"><i class="fa fa-user">&nbsp;&nbsp;&nbsp;</i>My Profile</a>
