--- a/src/app/userprofile/userprofile.component.html
+++ b/src/app/userprofile/userprofile.component.html
@@ -4,9 +4,17 @@
     <div class="card">
       <h5 class="card-header">Profile Picture</h5>
       <div class="card-body">
-        <h5 class="card-title">Current Profile Picture</h5>
-        <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-        <a href="#" class="btn btn-primary">Upload Picture</a>
+        <div class="row">
+          <div class="col-8">
+            <p>you can change your profile picture, click button below to upload a new picture </p>
+            <input type='file' accept="image/*" (change)="onSelectFile($event)">
+            <br><br>
+            <button class="btn btn-primary" (click)="onUpload()">Upload Picture</button>
+          </div>
+          <div class="col-4">
+            <img class="img-thumbnail pull-right" [src]="url"  style="width:256px;"/>
+          </div>
+        </div>
       </div>
     </div>
     <br>
@@ -15,15 +23,9 @@
       <div class="card-body">
         <form>
           <label for="display-name">Display Name</label>
-          <input type="text" id="display-name" name="display-name" class="form-control" placeholder="Display Name" ngModel required autofocus>
-          <br>
-          <label for="email">Email address</label>
-          <input type="email" id="email" name="email" class="form-control" placeholder="Email address" ngModel required autofocus>
-          <br>
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" class="form-control" placeholder="Password" ngModel required>
-          <input type="password" id="password-confirm" name="password-confirm" class="form-control" placeholder="Confirm Password" ngModel required>
-          <br>
+          <input type="text" id="display-name" name="display-name" class="form-control" placeholder="Display Name" [(ngModel)]="displayname" required autofocus>
+          <br><br>
+          <button class="btn btn-primary" (click)="onUpdateInfo()">Update Info</button>
         </form>
       </div>
     </div>
